Patron MVC (Noticias y comentarios de medicos)

--- a/views/inicio.ejs
+++ b/views/inicio.ejs
@@ -27,12 +27,7 @@
             <button type="button" data-bs-target="#news__carousel" data-bs-slide-to="2"></button>
           </div>
           <div class="carousel-inner">
-            <div class="carousel-item active" style="background-image: url(/images/Noticia1.jpeg)">
-            </div>
-            <div class="carousel-item" style="background-image: url(/images/Noticia2.jpg)">
-            </div>
-            <div class="carousel-item" style="background-image: url(/images/Noticia3.jpg)">
-            </div>
+            
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#news__carousel" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -57,77 +52,20 @@
         </div>
         <div class="comments__container">
           
-          <div class="comment__box">
-            <div class="comment__heading">
-              <div class="comment__profile">
-                <div class="profile__image">
-                  <img src="/images/user1.jpg">
-                </div>
-                <div class="profile__username">
-                  <strong>Croncker</strong>
-                  <span>@elviscrock</span>
-                </div>
-              </div>
-            </div>
-            <div class="comment__content">
-              <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-            </div>
-          </div>
-          <div class="comment__box">
-            <div class="comment__heading">
-              <div class="comment__profile">
-                <div class="profile__image">
-                  <img src="/images/user2.jpg">
-                </div>
-                <div class="profile__username">
-                  <strong>Achim</strong>
-                  <span>@TheAchim4000</span>
-                </div>
-              </div>
-            </div>
-            <div class="comment__content">
-              <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-            </div>
-          </div>
-          <div class="comment__box">
-            <div class="comment__heading">
-              <div class="comment__profile">
-                <div class="profile__image">
-                  <img src="/images/user3.jpg">
-                </div>
-                <div class="profile__username">
-                  <strong>Megatroud</strong>
-                  <span>@TrouxR</span>
-                </div>
-              </div>
-            </div>
-            <div class="comment__content">
-              <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-            </div>
-          </div>
-          <div class="comment__box">
-            <div class="comment__heading">
-              <div class="comment__profile">
-                <div class="profile__image">
-                  <img src="/images/user4.jpg">
-                </div>
-                <div class="profile__username">
-                  <strong>Abaco</strong>
-                  <span>@abaco428</span>
-                </div>
-              </div>
-            </div>
-            <div class="comment__content">
-              <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-            </div>
-          </div>
           
         </div>
         <div class="comments__panflets">
           <img src="/images/MinsaFolleto2.jpg">
         </div>
       </section>
-
+      <script src="/js/data/Comentario.js"></script>
+      <script src="/js/controllers/ComentarioManager.js"></script>
+      <script src="/js/data/Medico.js"></script>
+      <script src="/js/controllers/MedicoManager.js"></script>
+      <script src="/js/data/Notice.js"></script>
+      <script src="/js/controllers/NoticeManager.js"></script>
+      <script src="/js/inicio.js"></script>
+      
 
     <%- include("layouts/footer") %>
     
