--- a/views/perfil.ejs
+++ b/views/perfil.ejs
@@ -20,7 +20,7 @@
         <div class="box__col">
             <div class="box__container">
                 <div class="left__container">
-                    <img src="/images/user1.jpg" alt="">
+                    <img src="/images/user.png" alt="">
                     <h4>Croncker</h4>
                     <p>@elviscrock</p>
                     <button onclick="window.location.href='/historial'">Historial clínico</button>
@@ -36,10 +36,6 @@
                             <div class="data">
                                 <h5>Edad</h5>
                                 <p>21 años</p>
-                            </div>
-                            <div class="data">
-                                <h5>Sexo</h5>
-                                <p>Masculino</p>
                             </div>
                             <div class="data">
                                 <h5>Dirección</h5>
