Patron MVC (Solo usuario)

--- a/views/perfil.ejs
+++ b/views/perfil.ejs
@@ -21,30 +21,15 @@
             <div class="box__container">
                 <div class="left__container">
                     <img src="/images/user.png" alt="">
-                    <h4>Croncker</h4>
-                    <p>@elviscrock</p>
+                    <h4>Undefined</h4>
+                    <p>#########</p>
                     <button onclick="window.location.href='/historial'">Historial clínico</button>
                 </div>
                 <div class="right__container">
                     <div class="info__container">
                         <h3>Información</h3>
                         <div class="info__data">
-                            <div class="data">
-                                <h5>Nombre completo</h5>
-                                <p>Orlando Andres Galán Loza</p>
-                            </div>
-                            <div class="data">
-                                <h5>Edad</h5>
-                                <p>21 años</p>
-                            </div>
-                            <div class="data">
-                                <h5>Dirección</h5>
-                                <p>Cerca de la casa de Daniel</p>
-                            </div>
-                            <div class="data">
-                                <h5>Teléfono</h5>
-                                <p>999999999</p>
-                            </div>
+                            
                         </div>
                     </div>
                     <div class="vacunation__container">
@@ -133,9 +118,10 @@
                 </div>
             </div>
         </div>
-  
-  
     </div>
+    <script src="/js/data/Usuario.js"></script>
+      <script src="/js/controllers/UsuarioManager.js"></script>
+    <script src="/js/components/calendar.js"></script>
     <script src="/js/perfil.js"></script>
       
     <%- include("layouts/footer") %>
