--- a/views/inicio.ejs
+++ b/views/inicio.ejs
@@ -62,8 +62,8 @@
       <script src="/js/controllers/ComentarioManager.js"></script>
       <script src="/js/data/Medico.js"></script>
       <script src="/js/controllers/MedicoManager.js"></script>
-      <script src="/js/data/Notice.js"></script>
-      <script src="/js/controllers/NoticeManager.js"></script>
+      <script src="/js/data/Noticia.js"></script>
+      <script src="/js/controllers/NoticiaManager.js"></script>
       <script src="/js/inicio.js"></script>
       
 
