--- a/views/perfil.ejs
+++ b/views/perfil.ejs
@@ -109,6 +109,21 @@
             </div>
         </div>
     </div>
+
+    <div class="questions">
+        <h3>Preguntas mas comunes</h3>
+        <div class="common__questions">
+            <ul>
+                <a href="https://www.gob.pe/13223"><li>Efectos secundarios sobre la Covid-19</li> </a>
+                <a href="https://www.gob.pe/13435-llenar-formato-de-consentimiento-informado-para-vacunarte-contra-la-covid-19"><li>Formato de Consentimiento Informado para vacunarte contra la COVID-19</li> </a>
+                <a href="https://www.gob.pe/13314-acceder-a-tu-carnet-de-vacunacion"><li>Verificar tu carnet de vacunación</li> </a>
+            </ul>
+            <ul>
+                <a href="https://www.gob.pe/12188-indicaciones-para-el-transporte-aereo-durante-el-estado-de-emergencia-si-vas-a-ingresar-al-peru"><li>Si vas a ingresar a Perú y te vacunaste</li> </a>
+                <a href="https://www.gob.pe/13890-registrar-vacuna-contra-la-covid-19-aplicada-en-el-extranjero"><li>Registrar vacuna contra la COVID-19 aplicada en el extranjero</li> </a>
+            </ul>
+        </div>
+    </div>
     <script src="/js/data/Cita.js"></script>
       <script src="/js/controllers/CitaManager.js"></script>
     <script src="/js/data/CentroVacunacion.js"></script>
