--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -7,6 +7,7 @@
         <ul class="nav__links">
             <li><a href="/inicio">Inicio</a></li>
             <li><a href="/perfil">Perfil</a></li>
+            <li><a href="/foro">Foro</a></li>
         </ul>
     </nav>
     <a class="button__logout"><button>Logout</button></a>
