--- a/views/programador.ejs
+++ b/views/programador.ejs
@@ -90,6 +90,30 @@
   
   
     </div>
+
+    <div class="box" >
+        <div class="box__container">
+            <h3>Actualizar dosis de usuario</h3>
+            <div class="data">
+                <h4>DNI de usuario</h4>
+                <input type="text" id="dni_dosis">
+                    
+            </div>
+            <div class="box__container">
+                <div class="data">
+                    <h4>Dosis actual</h4>
+                    <select id="select_dosis">
+                        <option value="0">Primera dosis</option>
+                        <option value="1">Segunda dosis-</option>
+                    </select>
+                </div>
+                <div class="data">
+                    <button id="actualizar_dosis">Actualizar</button>
+                </div>
+                <div id="alert_dosis" class="alert alert-danger" role="alert"></div>
+            </div>      
+        </div>
+    </div>
     <script src="/js/data/Programador.js"></script>
       <script src="/js/controllers/ProgramadorManager.js"></script>
     <script src="/js/data/CentroVacunacion.js"></script>
