Gestion de errores en foro

--- a/public/css/foro.css
+++ b/public/css/foro.css
@@ -111,3 +111,19 @@
     background-color: #bbc9dd;
     width: 100%;
 }
+
+.alert {
+    padding: 13px;
+    margin-top: 20px;
+    font-size: 13px;
+    border: 1px solid transparent;
+    border-radius: 4px;
+  }
+
+  .alert-danger {
+    width: 100%;
+    background-color: #f2dede;
+    border-color: #ebccd1;
+    color: #a94442;
+    text-align: center;
+  }
